// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectNetworkDropdown > should change network 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600 sr-only"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="mainsail.devnet"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full"
      >
        <span>
          <span>
            <div>
              <label
                for="downshift-_r_6_-input"
                id="downshift-_r_6_-label"
              />
              <div
                class="invisible fixed w-auto whitespace-nowrap"
              >
                Mainsail Devnet
                …
              </div>
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="downshift-_r_6_-menu"
                    aria-expanded="false"
                    aria-labelledby="downshift-_r_6_-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
                    data-testid="SelectDropdown__input"
                    id="downshift-_r_6_-input"
                    placeholder="Select option"
                    role="combobox"
                    type="text"
                    value="Mainsail Devnet"
                  />
                  <span
                    class="no-ligatures pointer-events-none absolute inset-y-0 flex w-full items-center text-sm font-normal opacity-50 sm:text-base"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      Mainsail Devnet
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        aria-controls="downshift-_r_6_-menu"
                        aria-expanded="false"
                        class="flex items-center justify-center"
                        data-testid="SelectDropdown__caret"
                        id="downshift-_r_6_-toggle-button"
                        tabindex="-1"
                      >
                        <div
                          class="absolute inset-0 block cursor-pointer md:hidden"
                        />
                        <div
                          class="transition-transform text-theme-secondary-500"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetworkDropdown > should not render network option label if network is not defined 1`] = `<div />`;

exports[`SelectNetworkDropdown > should render 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600 sr-only"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full"
      >
        <span>
          <span>
            <div>
              <label
                for="downshift-_r_0_-input"
                id="downshift-_r_0_-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="downshift-_r_0_-menu"
                    aria-expanded="false"
                    aria-labelledby="downshift-_r_0_-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700 cursor-default"
                    data-testid="SelectDropdown__input"
                    id="downshift-_r_0_-input"
                    placeholder="Select option"
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        aria-controls="downshift-_r_0_-menu"
                        aria-expanded="false"
                        class="flex items-center justify-center"
                        data-testid="SelectDropdown__caret"
                        id="downshift-_r_0_-toggle-button"
                        tabindex="-1"
                      >
                        <div
                          class="absolute inset-0 block cursor-pointer md:hidden"
                        />
                        <div
                          class="transition-transform text-theme-secondary-500"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetworkDropdown > should render with default network 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600 sr-only"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full"
      >
        <span>
          <span>
            <div>
              <label
                for="downshift-_r_3_-input"
                id="downshift-_r_3_-label"
              />
              <div
                class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dim:border-theme-dim-500 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 transition-none hover:border-theme-navy-400 hover:outline-1 hover:outline-theme-navy-400 dim:hover:border-theme-dim-navy-600 dim:hover:outline-theme-dim-navy-600 dark:hover:border-theme-dark-navy-600 dark:hover:outline-theme-dark-navy-600"
              >
                <div
                  class="relative flex h-full flex-1"
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-controls="downshift-_r_3_-menu"
                    aria-expanded="false"
                    aria-labelledby="downshift-_r_3_-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:ring-transparent! focus:outline-hidden focus:shadow-none [&.shadow-none]:shadow-none no-ligatures text-sm! sm:text-base! w-full border-none placeholder:text-theme-secondary-400 dim:placeholder:text-theme-dim-500 dark:placeholder:text-theme-secondary-700 cursor-default"
                    data-testid="SelectDropdown__input"
                    id="downshift-_r_3_-input"
                    placeholder="Select option"
                    role="combobox"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 dim:divide-theme-dim-700 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        aria-controls="downshift-_r_3_-menu"
                        aria-expanded="false"
                        class="flex items-center justify-center"
                        data-testid="SelectDropdown__caret"
                        id="downshift-_r_3_-toggle-button"
                        tabindex="-1"
                      >
                        <div
                          class="absolute inset-0 block cursor-pointer md:hidden"
                        />
                        <div
                          class="transition-transform text-theme-secondary-500"
                        >
                          <div
                            style="height: 10px; width: 10px;"
                          >
                            <svg
                              id="chevron-down-small"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 10 10"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
